// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should generate explicit executor branches for CodeBuddy, IFlow, and OpenCode without default-provider routing > quick-start-explicit-executor-matrix-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # CodeBuddy CLI Runtime Configuration
      # Uses explicit provider/bootstrap registration plus CODEBUDDY_* runtime variables
      # ==================================================
      AI__Providers__Providers__CodebuddyCli__Enabled: "true"
      AI__Providers__Providers__CodebuddyCli__Type: "CodebuddyCli"
      AI__Providers__Providers__CodebuddyCli__ExecutablePath: "codebuddy"
      AI__PlatformConfigurations__CodebuddyCli__ExecutablePath: "codebuddy"
      AI__PlatformConfigurations__CodebuddyCli__Arguments: "--acp"
      CODEBUDDY_API_KEY: "cb-test-key"
      CODEBUDDY_INTERNET_ENVIRONMENT: "ioa"
      # ==================================================
      # IFlow CLI Runtime Configuration
      # Uses explicit ACP bootstrap keys and relies on prior CLI login or mounted runtime state
      # ==================================================
      AI__Providers__Providers__IFlowCli__Enabled: "true"
      AI__Providers__Providers__IFlowCli__Type: "IFlowCli"
      AI__Providers__Providers__IFlowCli__ExecutablePath: "iflow"
      AI__PlatformConfigurations__IFlowCli__ProviderName: "IFlowCli"
      AI__PlatformConfigurations__IFlowCli__ExecutablePath: "iflow"
      AI__PlatformConfigurations__IFlowCli__Arguments: "--experimental-acp --port {port}"
      AI__PlatformConfigurations__IFlowCli__AuthMethod: "iflow"
      # ==================================================
      # OpenCode Runtime Configuration
      # Uses the managed OpenCode runtime contract baked into the unified image
      # ==================================================
      AI__Providers__Providers__OpenCodeCli__Enabled: "true"
      AI__Providers__Providers__OpenCodeCli__Type: "OpenCodeCli"
      AI__Providers__Providers__OpenCodeCli__ExecutablePath: "opencode"
      AI__OpenCode__Enabled: "true"
      AI__OpenCode__ExecutablePath: "opencode"
      AI__OpenCode__Model: "anthropic/claude-sonnet-4"
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for Anthropic provider (zh-CN) > quick-start-anthropic-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude Runtime Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI, Aliyun, and custom providers
      # ==================================================
      # Anthropic Official API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # No ANTHROPIC_URL needed - uses default Anthropic endpoint
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for ZAI provider (zh-CN) > quick-start-zai-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude Runtime Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI, Aliyun, and custom providers
      # ==================================================
      # Zhipu AI (ZAI) - uses Anthropic-compatible API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      ANTHROPIC_URL: "https://open.bigmodel.cn/api/anthropic"
      # API Provider: Zhipu AI (ZAI)
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for custom provider (zh-CN) > quick-start-custom-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude Runtime Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI, Aliyun, and custom providers
      # ==================================================
      # Custom Anthropic-compatible API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      ANTHROPIC_URL: "https://custom-api.example.com"
      # API Provider: Custom Endpoint
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for default quick start config (en-US) > quick-start-default-en-US 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 1/1/2024, 12:00:00 AM

# ==================================================
# Support Information
# ==================================================
# If you encounter any issues or need technical support:
# - Join our QQ group: 610394020
# - Join our Discord community: https://discord.gg/qY662sJK
# - We provide real-time assistance and solutions
# - Share your experiences and connect with other users

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude Runtime Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI, Aliyun, and custom providers
      # ==================================================
      # Anthropic Official API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # No ANTHROPIC_URL needed - uses default Anthropic endpoint
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for default quick start config (zh-CN) > quick-start-default-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude Runtime Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI, Aliyun, and custom providers
      # ==================================================
      # Anthropic Official API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # No ANTHROPIC_URL needed - uses default Anthropic endpoint
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;
